--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ flake8==3.8.4
 flake8-django==1.1.1
 flake9==3.8.3.post2
 flake9-isort==4.0.2
-guniconrn
+guniconrn==20.0.4
 idna==2.10
 isort==5.7.0
 lazy-object-proxy==1.4.3
